tests/test_files/type_checker/bad_identifier.stderr
error: unknown identifier `msg1`
- bad_identifier.lark:2:4
2 |     msg1
  |     ^^^^
