tests/test_files/type_checker/bad_identifier.lark
def new(msg: bool,) -> bool {
    msg1
    //~ ERROR: unknown identifier `msg1`
}